--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
         <div class="carousel-container lancamentos-carousel">
             <div class="carousel-track lancamentos-track">
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 1" class="product-image">
+                    <img src="img/produto.png" alt="Produto 1" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 1</h2>
                         <p class="product-price">R$ 1,50</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 2" class="product-image">
+                    <img src="img/produto.png" alt="Produto 2" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 2</h2>
                         <p class="product-price">R$ 30,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 3" class="product-image">
+                    <img src="img/produto.png" alt="Produto 3" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 3</h2>
                         <p class="product-price">R$ 30,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 4" class="product-image">
+                    <img src="img/produto.png" alt="Produto 4" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 4</h2>
                         <p class="product-price">R$ 30,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 5" class="product-image">
+                    <img src="img/produto.png" alt="Produto 5" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 5</h2>
                         <p class="product-price">R$ 30,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 6" class="product-image">
+                    <img src="img/produto.png" alt="Produto 6" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 6</h2>
                         <p class="product-price">R$ 30,00</p>
@@ -92,42 +92,42 @@
         <div class="carousel-container destaques-carousel">
             <div class="carousel-track destaques-track">
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 1 Destaques" class="product-image">
+                    <img src="img/produto.png" alt="Produto 1 Destaques" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 1 Destaques</h2>
                         <p class="product-price">R$ 20,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 2 Destaques" class="product-image">
+                    <img src="img/produto.png" alt="Produto 2 Destaques" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 2 Destaques</h2>
                         <p class="product-price">R$ 25,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 3 Destaques" class="product-image">
+                    <img src="img/produto.png" alt="Produto 3 Destaques" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 3 Destaques</h2>
                         <p class="product-price">R$ 25,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 4 Destaques" class="product-image">
+                    <img src="img/produto.png" alt="Produto 4 Destaques" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 4 Destaques</h2>
                         <p class="product-price">R$ 25,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 5 Destaques" class="product-image">
+                    <img src="img/produto.png" alt="Produto 5 Destaques" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 5 Destaques</h2>
                         <p class="product-price">R$ 25,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 6 Destaques" class="product-image">
+                    <img src="img/produto.png" alt="Produto 6 Destaques" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 6 Destaques</h2>
                         <p class="product-price">R$ 25,00</p>
@@ -146,14 +146,14 @@
         <div class="carousel-container mais-vendidos-carousel">
             <div class="carousel-track mais-vendidos-track">
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 1 Mais Vendidos" class="product-image">
+                    <img src="img/produto.png" alt="Produto 1 Mais Vendidos" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 1 Mais Vendidos</h2>
                         <p class="product-price">R$ 30,00</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="img/logo.jpg" alt="Produto 2 Mais Vendidos" class="product-image">
+                    <img src="img/produto.png" alt="Produto 2 Mais Vendidos" class="product-image">
                     <div class="product-details">
                         <h2 class="product-title">Produto 2 Mais Vendidos</h2>
                         <p class="product-price">R$ 35,00</p>
